# automation_pipeline_orchestrator_mvp

./: README.md  pyproject.toml
examples/: file_event.sample.json  full_pipeline_integration_example.md  pipeline_execution.sample.json
pipelines/: sample.pipeline.yaml
src/automation_pipeline_orchestrator/: cli.py  contract.py  loader.py  logger.py  notification_adapter.py  orchestrator.py  workflow_adapter.py
tests/: test_bootstrap.py  test_cli.py  test_contract.py  test_integration_examples.py  test_loader.py  test_logger.py  test_notification_adapter.py  test_orchestrator.py  test_workflow_adapter.py
