[project]
name = "automation-pipeline-orchestrator-mvp"
version = "0.1.0"
description = "A minimal orchestration layer for RADAR Services automation pipelines."
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.0"
]

[project.scripts]
automation-orchestrator = "automation_pipeline_orchestrator.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
